<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/payment"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".confirmPaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="12dp"
                    android:text="Enter Your Card Details"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="28sp" />




            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorOnPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCardOwnerName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextOwnerName"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFEFE"
                            android:hint="@string/Owner_Name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCardNumber"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextCardNumber"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/Card_Number"
                            android:inputType="number"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputExpireDate"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextExpireDate"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/Expire_Date"
                            android:inputType="date"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCVV"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextCVV"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFFFF"
                            android:hint="@string/CVV"
                            android:inputType="number"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputBank"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextBank"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#FFFEFE"
                            android:hint="@string/Bank"
                            android:inputType="number"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/cirPayNowButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Save my card" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:minHeight="48dp"
                        android:onClick="onCardDetailsClick"
                        android:text="My Card Details"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>