<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nametext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="This is Name"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cardNumbertext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nametext"
                    android:layout_marginLeft="10dp"
                    android:text="This is Card number"
                    android:textColor="#000"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/expDatetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardNumbertext"
                    android:layout_marginLeft="10dp"
                    android:text="This is exp date"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cvvtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/expDatetext"
                    android:layout_marginLeft="10dp"
                    android:text="This is cvv"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/banktext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvvtext"
                    android:layout_marginLeft="10dp"
                    android:text="This is bank name"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cirPayButton"
                    style="@style/loginButton"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/banktext"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Pay_button" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cirUpdateButton"
                style="@style/loginButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:onClick="onUpdateClick"
                android:text="@string/Update_button" />

            <Button
                android:id="@+id/cirDeleteButton"
                style="@style/loginButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Delete_button" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>